--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,7 @@
 {
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "public": "dist",
+    "ignore": [],
+    "cleanUrls": true
   }
 }
